--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>React SSR with ES Modules</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      async
+      type="module"
+      src="https://ga.jspm.io/npm:es-module-shims@1.5.4/dist/es-module-shims.js"
+    ></script>
     <script type="importmap">
       {
         "imports": {
